# CPP_RZ_PIC_Serial

./: CMakeLists.txt  LICENSE  README.md  main.cpp
ElementaryProcesses/: Collision.cpp  Collision.h  EnergyCrossSection.cpp  EnergyCrossSection.h  MonteCarloCollision.cpp  MonteCarloCollision.h  MonteCarloCollisions.cpp  MonteCarloCollisions.h  NanbuCollisions.cpp  NanbuCollisions.h  NeutralGas.cpp  NeutralGas.h  NullCollisions.cpp  NullCollisions.h
Field/: Field.cpp  Field.h  PoissonSolver.cpp  PoissonSolver.h  _PoissonSolver.cpp  _PoissonSolver.h
Grid/: Grid.cpp  Grid.h
InteractionWithMaterial/: Dielectric.cpp  Dielectric.h  ParticleEmission.cpp  ParticleEmission.h  ParticleLeave.cpp  ParticleLeave.h
Particles/: Interpolation.cpp  Interpolation.h  Particles.cpp  Particles.h  Pusher.cpp  Pusher.h
Tests/: Test_ChargeInterpolation.h  Test_CollisionEnergyCrossSection.h  Test_Compute_E_from_Phi.h  Test_ElementaryProcesses.h  Test_EnergyCrossSection.h  Test_FieldInterpolation.h  Test_FieldSolver.h  Test_Logger.h  Test_Matrix.h  Test_MonteCarloCollision.h  Test_NeutralGas.h  Test_PIC_Cycle.h  Test_ParticleEmission.h  Test_ParticleLeave.h  Test_ParticlePositionVelocityGeneration.h  Test_ParticlesLoad.h  Test_Pusher.h  Test_ReloadSimulation.h  Test_Simulation.h  Test_SimulationEnergyCrossSection.h  Test_SimulationWithDielectric.h  Test_SinglePtclSimulation.h
Tools/: Helpers.cpp  Helpers.h  Logger.cpp  Logger.h  Matrix.cpp  Matrix.h  ParticlesLoad.cpp  ParticlesLoad.h  ParticlesLogger.cpp  ParticlesLogger.h  ProjectTypes.h
(+2 files in other folders)
